--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Wowak Farms - contact us</title>
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="contact.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
 		</div>
 	</div>
 <div id="contact">
-	<p id="wow">We'd love to hear from you. The best way, of course, is to stop by. We're open generally from May (the first of the asparagus) until the last of the sprouts, potatoes, winter squash, and the like in December.</p>
+	<p id="wow">We'd love to hear from you. The best way, of course, is to stop by. We're open generally from May (the first of the asparagus) until the last of the sprouts, potatoes, winter squash and the like in December.</p>
 
 <div style="width:500px;overflow:hidden;height:500px;max-width:100%;"><div id="my-map-display" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=2805+Main+Road,+Laurel,+NY,+United+States&key=AIzaSyAN0om9mFmy1QN6Wf54tXAowK4eT0ZUPrU"></iframe></div><a class="embed-map-html" href="http://www.bootstrapskins.com/themes/wordpress" id="grab-maps-authorization"></a><style>#my-map-display img{max-width:none!important;background:none!important;font-size: inherit;}</style></div><script src="https://www.bootstrapskins.com/google-maps-authorization.js?id=08eb227b-754e-c500-c645-45d8495cc0bf&c=embed-map-html&u=1454294814" defer="defer" async="async"></script>
 
