--- a/gallery.html
+++ b/gallery.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 	<title>Wowak Farms - gallery</title>
-	<script type="text/javascript" src="js.js"></script>
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="gallery.css">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 </head>
 <body>
@@ -28,6 +27,7 @@
 <script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script> <!-- 16 KB -->
 <div class="fotorama">
 	<img src="images/corn-ear.jpg">
+	<img src="images/One.jpg">
 	<img src="images/cauliflower-plants.jpg">
 	<img src="images/beecomb.jpg">
 	<img src="images/broccoli.jpg">
