--- a/index.html
+++ b/index.html
@@ -4,16 +4,32 @@
 	<title>Wowak Farms</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link href='http://fonts.googleapis.com/css?family=Sanchez:400italic,400' rel='stylesheet' type='text/css'>
-	<script type="text/javascript" src="js.js"></script>
-	
 </head>
 <body>
-<body id="one">
+<body>
 
 	<div id="wrapper">
 		<div id="homeMainContainer">
 			<div id="welcome">
-				<a href="index.html"><img src="images/logo-nobg.png" id="logo"></a>
+			
+	<img id="logo" onclick="changeImage()" src="images/logo-nobg.png">
+
+<script>
+            var image =  document.getElementById("logo");
+
+            function changeImage()
+            {
+                if (image.getAttribute('src') == "images/logo-nobg.png")
+                {
+                    image.src = "images/colorlogo.png";
+                }
+                else
+                {
+                    image.src = "images/logo-nobg.png";
+                }
+            }
+        </script>
+
 			</div>
 			<div id="homeNav">
 				<ul>
@@ -25,7 +41,6 @@
 			</div>
 		</div>
 	</div>
-	
 </body>
 </html>
 
