--- a/gallery.html
+++ b/gallery.html
@@ -24,39 +24,39 @@
 
 
 <link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet"> 
-<script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script> <!-- 16 KB -->
-<div class="fotorama">
-	<img src="images/corn-ear.jpg">
-	<img src="images/One.jpg">
-	<img src="images/cauliflower-plants.jpg">
-	<img src="images/beecomb.jpg">
-	<img src="images/broccoli.jpg">
-	<img src="images/spinach.jpg">
-	<img src="images/sprinkler.jpg">
-	<img src="images/strawberries.jpg">
-	<img src="images/asparagus.jpg">
-	<img src="images/sign.jpg">
-	<img src="images/sprouts.jpg">
-	<img src="images/rhubarb.jpg">
-	<img src="images/cucumbers.jpg">
-	<img src="images/fields.jpg">
-	<img src="images/winter-squash.jpg">
-	<img src="images/tomatoes-carrots.jpg">
-	<img src="images/raspberries.jpg">
-	<img src="images/blakepumpkin.jpg">
-	<img src="images/red-barn.jpg">
-	<img src="images/zebra-eggplant.jpg">
-	<img src="images/cornfield.jpg">
-	<img src="images/cauliflowers.jpg">
-	<img src="images/val.jpg">
-	<img src="images/ducks.jpg">
-	<img src="images/radishes.jpg">
-	<img src="images/peas.jpg">
-	<img src="images/herbs.jpg">
-	<img src="images/watermelons.jpg">
-	<img src="images/potatoes.jpg">
-	<img src="images/kobocha.png">
-	<img src="images/corn.jpg">
-</div>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script>
+	<div class="fotorama">
+		<img src="images/corn-ear.jpg">
+		<img src="images/One.jpg">
+		<img src="images/cauliflower-plants.jpg">
+		<img src="images/beecomb.jpg">
+		<img src="images/broccoli.jpg">
+		<img src="images/spinach.jpg">
+		<img src="images/sprinkler.jpg">
+		<img src="images/strawberries.jpg">
+		<img src="images/asparagus.jpg">
+		<img src="images/sign.jpg">
+		<img src="images/sprouts.jpg">
+		<img src="images/rhubarb.jpg">
+		<img src="images/cucumbers.jpg">
+		<img src="images/fields.jpg">
+		<img src="images/winter-squash.jpg">
+		<img src="images/tomatoes-carrots.jpg">
+		<img src="images/raspberries.jpg">
+		<img src="images/blakepumpkin.jpg">
+		<img src="images/red-barn.jpg">
+		<img src="images/zebra-eggplant.jpg">
+		<img src="images/cornfield.jpg">
+		<img src="images/cauliflowers.jpg">
+		<img src="images/val.jpg">
+		<img src="images/ducks.jpg">
+		<img src="images/radishes.jpg">
+		<img src="images/peas.jpg">
+		<img src="images/herbs.jpg">
+		<img src="images/watermelons.jpg">
+		<img src="images/potatoes.jpg">
+		<img src="images/kobocha.png">
+		<img src="images/corn.jpg">
+	</div>
 </body>
 </html>
